Backend_Phase_2/k8's/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubflow-app
  namespace: hubflow

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hubflow-app

  template:
    metadata:
      labels:
        app: hubflow-app

    spec:
      containers:

        - name: hubflow-app

          # CHANGE THIS TO YOUR ACTUAL IMAGE
          image: your-dockerhub-username/hubflow:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 3000
              name: http

          resources:

            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "1"
              memory: "512Mi"

          readinessProbe:
            tcpSocket:
              port: 3000

            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            tcpSocket:
              port: 3000

            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
