Backend_Phase_2/k8's/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hubflow-mysql
  namespace: hubflow

spec:
  serviceName: hubflow-db
  replicas: 1

  selector:
    matchLabels:
      app: hubflow-mysql

  template:
    metadata:
      labels:
        app: hubflow-mysql

    spec:
      containers:

        - name: mysql
          image: mysql:8.0

          ports:
            - containerPort: 3306
              name: mysql

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

          resources:

            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1"
              memory: "1Gi"

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"

            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"

            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-data
