Backend_Phase_2/k8's/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubflow-db
  namespace: hubflow

spec:
  type: ClusterIP

  selector:
    app: hubflow-mysql

  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
