Backend_Phase_2/k8's/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubflow-ingress
  namespace: hubflow

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"

spec:

  ingressClassName: nginx

  rules:

    - host: hubflow.example.com

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: hubflow-app

                port:
                  number: 3000
